# Intelligent-Server-Monitoring-Framework

./: .dockerignore  .env.example  .env.test  .eslintignore  .gitignore  .prettierignore  .replit  CLEAN_CODE_SUMMARY.md  CODE_CLEANUP_SUMMARY.md  Dockerfile  INTELLIGENT_MCP_MONITORING.md  README.md  SPRINT-1-SUMMARY.md  SPRINT-2-PATTERNS-SUMMARY.md  TEST_RESULTS_SUMMARY.md  dev-start.sh  dev-stop.sh  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  imf-test-manager-1.0.0.tgz  package-lock.json  package.json  package.json.e2e-addition  pyproject.toml  replit.md  test-runner.md  test-simple.js  test-summary.html  vite.config.ts  vitest.config.ts
.config/: README.md  development.json
.husky/: pre-commit  pre-push
ai_models/: code_issues.joblib  deployment_success.joblib  training_data.json  training_metrics.json
attached_assets/: Pasted--Standard-detectors-config-plugins-problem-detectors-extend--1754249369035_1754249369036.txt  Pasted--code-analysis-integration-py-Integration-der-Code-Analyse-in-das-Framework-import-asyncio-from--1754247782617_1754247782617.txt  Pasted--complete-ai-integration-py-Vollst-ndige-Integration-des-AI-Systems-import-asyncio-import-yaml-f-1754248460039_1754248460039.txt  Pasted--usr-bin-env-python3-Intelligent-Monitoring-Framework-Python-Prototype-Ein-erweiterbares-le-1754246597926_1754246597927.txt
client/: index.html
docker/: README.md  init-db-ci.sql  init-db.sql  migration-add-function-name.sql  setup.sh  test-manager.Dockerfile
docs/: AI_LEARNING_TEST_PROPOSAL.md  (+17 more)
(+354 files in other folders)
