[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "websockets>=15.0.1",
]
